[package]
name = "nacos-sdk-rs"
version = "0.0.1"
authors = ["Lan Liang <liangyuanpengem@163.com>"]
edition = "2018"
license = "Apache-2.0"
description = "rust sdk for nacos"
repository = "https://github.com/liangyuanpeng/nacos-sdk-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
